test/fails/bad_types/bad_mult.lgl
void main() {
    print 5 * true;
}